--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Abdallah Bari</title>
   </head>
   <body>
-    <div id="app" class="bg-black h-screen"></div>
+    <div id="app" class="bg-myYellow h-screen"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
