--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/assets/main.css">
-    <title>Abdallah Bari</title>
-  </head>
-  <body>
-    <div id="app" class="bg-myWhite h-screen text-myWhite text-sm"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="src/assets/main.css">
+  <title>Abdallah Bari</title>
+</head>
+
+<body>
+  <div id="app" class="bg-myWhite h-screen text-myDark-100 text-sm lg:text-base xl:text-lg font-Inter font-medium"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
