build initial about and footer and modify projects sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div id="app" class="bg-myWhite h-screen text-myDark-100 text-sm lg:text-base xl:text-lg font-Inter font-medium"></div>
+  <div id="app" class="bg-myWhite h-screen text-myDark-100 text-sm lx:text-base font-Inter font-medium"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
