--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="src/assets/main.css">
   <title>Abdallah Bari</title>
+
+  <style>
+    html{
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 
 <body>
