--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 
-<body>
+<body class="scrollbar-thin  scrollbar-thumb-myGray-500 scrollbar-thumb-rounded-md scrollbar-track-myWhite">
   <div id="app" class="bg-myWhite h-screen text-myDark-100 text-sm lx:text-base font-Inter font-medium"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
