home page complete redo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class="scrollbar-thin  scrollbar-thumb-myGray-500 scrollbar-thumb-rounded-md scrollbar-track-myWhite">
-  <div id="app" class="bg-myWhite h-screen text-myDark-100 text-sm lx:text-base font-Inter font-medium"></div>
+  <div id="app" class="h-screen text-myDark-100 text-base font-primary"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
