--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="src/assets/main.css" />
+    <title>Abdallah Bari</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="src/assets/main.css">
-  <title>Abdallah Bari</title>
-
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
-  </style>
-</head>
-
-<body class="scrollbar-thin  scrollbar-thumb-myGray-500 scrollbar-thumb-rounded-md scrollbar-track-myWhite">
-  <div id="app" class="h-screen text-myDark-100 text-base font-primary"></div>
-  <script type="module" src="/src/main.js"></script>
-</body>
-
+  <body
+    class="scrollbar-thin scrollbar-thumb-myGray-500 scrollbar-thumb-rounded-md scrollbar-track-myWhite">
+    <div id="app" class="h-screen text-myDark-100 text-base font-primary"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
