initial meta tags setup

--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Abdallah Bari's Portfolio: Experienced web developer specializing in front-end development with Vue.js. Check out my work and get in touch for collaboration.">
+  <meta name="robots" content="index,follow">
+
+  <meta property="og:title" content="Abdallah Bari" />
+  <!-- 
+    <meta property="og:description" content="A brief description of the page" />
+    <meta property="og:image" content="URL of the image to display" />
+    <meta property="og:url" content="https://example.com/page-url" /> -->
+
+  <link rel="icon" href="/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="src/assets/main.css" />
   <link rel="stylesheet" href="src/assets/style/circleStyle.css">
-  <title>Abdallah Bari</title>
+  <title>Abdallah Bari | Some Description</title>
 </head>
 
 <body class="scrollbar-thin scrollbar-thumb-myGray-500 scrollbar-thumb-rounded-md scrollbar-track-myWhite">
