--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Abdallah Bari's Portfolio: Experienced web developer specializing in front-end development with Vue.js. Check out my work and get in touch for collaboration.">
+    content="Is your website holding back your business? Let's fix that. I'm a web developer specializing in transforming business websites into modern and professional digital platforms.">
   <meta name="robots" content="index,follow">
 
-  <meta property="og:title" content="Abdallah Bari" />
+  <meta property="og:title" content="Abdallah Bari | Portfolio" />
+  <meta property="og:description" content="Checkout my web development portfolio and explore my recent projects!" />
   <!-- 
-    <meta property="og:description" content="A brief description of the page" />
     <meta property="og:image" content="URL of the image to display" />
     <meta property="og:url" content="https://example.com/page-url" /> -->
 
@@ -21,7 +21,7 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="src/assets/main.css" />
   <link rel="stylesheet" href="src/assets/style/circleStyle.css">
-  <title>Abdallah Bari | Some Description</title>
+  <title>Abdallah Bari | Portfolio</title>
 </head>
 
 <body class="scrollbar-thin scrollbar-thumb-myGray-500 scrollbar-thumb-rounded-md scrollbar-track-myWhite">
