reformat index.html & create robots.txt for page indexing

--- a/index.html
+++ b/index.html
@@ -1,36 +1,29 @@
 <!doctype html>
 <html lang="en" class="scroll-smooth">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Is your website holding back your business? Let's fix that. I'm a web developer specializing in transforming business websites into modern and professional digital platforms."
-    />
-    <meta name="robots" content="index,follow" />
 
-    <meta property="og:title" content="Abdallah Bari | Portfolio" />
-    <meta
-      property="og:description"
-      content="Checkout my web development portfolio and explore my recent projects!"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Is your website holding back your business? Let's fix that. I'm a web developer specializing in transforming business websites into modern and professional digital platforms." />
+  <meta name="robots" content="index,follow" />
 
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="src/assets/main.css" />
-    <link rel="stylesheet" href="src/assets/style/circleStyle.css" />
-    <title>Abdallah Bari | Portfolio</title>
-  </head>
+  <meta property="og:title" content="Abdallah Bari | Portfolio" />
+  <meta property="og:description" content="Checkout my web development portfolio and explore my recent projects!" />
 
-  <body
-    class="scrollbar-thin scrollbar-thumb-myGray-500 scrollbar-thumb-rounded-md scrollbar-track-myWhite"
-  >
-    <div id="app" class="h-screen text-myDark-100 text-base font-primary"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="src/assets/main.css" />
+  <link rel="stylesheet" href="src/assets/style/circleStyle.css" />
+  <title>Abdallah Bari | Portfolio</title>
+</head>
+
+<body class="scrollbar-thin scrollbar-thumb-myGray-500 scrollbar-thumb-rounded-md scrollbar-track-myWhite">
+  <div id="app" class="h-screen text-myDark-100 text-base font-primary"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
