remove unused colors & inter font

--- a/index.html
+++ b/index.html
@@ -12,17 +12,13 @@
   <meta property="og:description" content="Checkout my web development portfolio and explore my recent projects!" />
 
   <link rel="icon" href="/favicon.ico" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet" />
   <link rel="stylesheet" href="src/assets/main.css" />
   <link rel="stylesheet" href="src/assets/style/circleStyle.css" />
   <title>Abdallah Bari | Portfolio</title>
 </head>
 
-<body class="scrollbar-thin scrollbar-thumb-myGray-500 scrollbar-thumb-rounded-md scrollbar-track-myWhite">
-  <div id="app" class="h-screen text-myDark-100 text-base font-primary"></div>
+<body class="scrollbar-thin scrollbar-thumb-myGray-200 scrollbar-thumb-rounded-md scrollbar-track-myWhite">
+  <div id="app" class="h-screen text-myDark text-base font-primary"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
